--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -2,26 +2,42 @@
     width: 100%;
     height: 773px;
     display: flex;
-    background: url("/public/img/Zuhor2.jpg");
+    background: #F3F2EC;
     background-size: cover;
 }
 
 .home-navbar .navbar-container {
-    margin-top: 55px;
+    margin-top: 75px;
     height: 642px;
+}
+
+.home-navbar .navbar-container .menu1 {
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 50px;
 }
 
 .home-navbar .navbar-container .menu {
     height: 50px;
+    width: 800px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    border-radius: 24px;
+    overflow: hidden;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
+    transition: all 0.3s ease;
+    background: #F3F2EC;
+    border: 1px solid #d4bc9f;
 }
 
 .home-navbar .navbar-container .menu .brand-logo {
     position: absolute;
-    top: -35px;
+    top: -30px;
     left: 150px;
     width: 280px;
     height: auto;
@@ -38,8 +54,9 @@
 }
 
 .home-navbar .navbar-container .menu .links .login-button {
-    background: #3776cc;
-    color: #f8f8ff;
+    margin-right: 13px;
+    background: #cdcdcd;
+    color: #353535;
 }
 
 .home-navbar .navbar-container .menu .user-avatar {
@@ -53,7 +70,7 @@
 }
 
 .home-navbar .hover-line a {
-    color: #f8f8ff;
+    color: #272727;
     z-index: 100;
 }
 
@@ -94,27 +111,27 @@
 }
 
 .home-navbar .navbar-container .header-frame .detail .head-main-txt {
-    width: 450px;
-    height: 150px;
-    font-family: "Roboto Serif";
-    font-size: 50px;
+    color: #222;
+    font-family: Prata;
+    font-size: 53px;
     font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: -0.75px;
-    color: #f8f8ff;
+    font-weight: 400;
+    line-height: 145%; /* 105.85px */
+    letter-spacing: -1.46px;
+    text-transform: capitalize;
 }
 
 .home-navbar .navbar-container .header-frame .detail .wel-txt {
-    width: 510px;
-    height: 42px;
-    font-family: "Roboto Serif";
-    font-size: 36px;
+    color: #7A7A7A;
+    width: 602px;
+    height: 99px;
+    flex-shrink: 0;
+    font-family: "Plus Jakarta Sans";
+    font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: normal;
-    letter-spacing: -0.54px;
-    color: #d7b686;
+    line-height: 220%; /* 35.2px */
+    letter-spacing: 0.64px;
 }
 
 .home-navbar .navbar-container .header-frame .detail .service-txt {
@@ -127,28 +144,30 @@
     font-weight: 400;
     line-height: normal;
     letter-spacing: -0.3px;
-    color: #d5d5d5;
+    color: #848484;
 }
 
 .home-navbar .navbar-container .detail .signup {
     width: 197px;
     height: 61px;
     flex-shrink: 0;
-    margin-left: 900px;
-    margin-top: 250px;
+    margin-top: 73px;
 
 }
 
 .home-navbar .navbar-container .detail .signup .signup-button {
-    color: #111;
-    font-family: "Plus Jakarta Sans";
-    font-size: 16px;
-    background-color: white;
+      width: 210px;
+    height: 60px;
+    border-radius: 4px;
+    background: #cdcdcd;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 17px;
     font-style: normal;
     font-weight: 400;
-    letter-spacing: 1.6px;
-    align-items: center;
-    
+    line-height: normal;
+    color: #252525;
+
 }
 
 .home-navbar .navbar-container .logo-frame {
@@ -160,35 +179,57 @@
 .home-navbar .navbar-container .logo-frame .logo-img {
     width: 100%;
     height: 100%;
-    background: url("/public/img/logo.webp");
+    margin-top: -70px;
+    margin-left: 150px;
+    background: url("/public/img/Quron2.jpg");
     background-size: contain;
     background-repeat: no-repeat;
-    filter: invert(25%);
 }
 
 .other-navbar {
     width: 100%;
     height: 400px;
     display: flex;
-    background: url("/public/img/banner.webp");
+    background: #EDEBE4;
     background-size: cover;
 }
 
 .other-navbar .navbar-container {
-    margin-top: 55px;
+    margin-top: 75px;
+}
+
+.other-navbar .navbar-container .menu1 {
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 50px;
 }
 
 .other-navbar .navbar-container .menu {
     height: 50px;
+    width: 800px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    border-radius: 24px;
+    overflow: hidden;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
+    transition: all 0.3s ease;
+    background: #F3F2EC;
+    border: 1px solid #d4bc9f;
 }
 
 .other-navbar .navbar-container .menu .brand-logo {
-    width: 125px;
-    height: 30px;
+    position: absolute;
+    top: -30px;
+    left: 150px;
+    width: 280px;
+    height: auto;
+    max-width: 100%;
+    display: block;
 }
 
 .other-navbar .navbar-container .menu .links {
@@ -200,8 +241,9 @@
 }
 
 .other-navbar .navbar-container .menu .links .login-button {
-    background: #3776cc;
-    color: #f8f8ff;
+    margin-right: 13px;
+    background: #cdcdcd;
+    color: #353535;
 }
 
 .other-navbar .navbar-container .menu .user-avatar {
@@ -215,7 +257,7 @@
 }
 
 .other-navbar .hover-line a {
-    color: #f8f8ff;
+    color: #272727;
     z-index: 100;
 }
 
